# tg-sticker-downloader

./: Cargo.toml  README.MD
src/: main.rs
