[package]
name = "tg-sticker-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
teloxide = { version = "0.12.2", features = ["auto-send"] }
teloxide-macros = "0.7.1"
tokio = { version = "1.26.0", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
ffmpeg-next = "6.0.0"
image = "0.24.6"